--- a/FrontEnd/chartflow/src/components/Header/Header.module.css
+++ b/FrontEnd/chartflow/src/components/Header/Header.module.css
@@ -1,26 +1,34 @@
 .container {
   display: flex;
-  margin: auto;
-  width: fit-content;
-  padding-bottom: 30px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.container lord-icon:hover {
-  cursor: pointer;
+.menu {
+  display: flex;
+  justify-content: space-between;
 }
+
+.section1 {
+  flex: 1;
+}
+.section2 {
+  flex: 2;
+}
+.section3 {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+}
+
 .tab {
-  width: 170px;
-  height: 1.2rem;
-  margin: 0.4rem auto;
   border: 0;
   background-color: transparent;
   color: #000;
   text-align: center;
   font-feature-settings: "clig" off, "liga" off;
   font-size: 1.1rem;
-  font-style: normal;
   font-weight: 600;
-  line-height: 100%; /* 26.462px */
 }
 .tab:hover {
   font-weight: 700;
@@ -28,18 +36,173 @@
   color: #6c00ff;
 }
 
-.login {
-  background-color: "#8EFFA7";
-  width: 170px;
-  height: 1.2rem;
-  margin: 0.4rem auto;
+.btn {
+  display: inline-flex;
+  padding: 15px 20px 15px 20px;
+  border-radius: 100px;
+  background: #8effa7;
+  color: #6c00ff;
+  font-size: 1.1rem;
+  font-weight: 600;
   border: 0;
-  background-color: transparent;
+  text-align: center;
+}
+.btn:hover {
+  font-weight: 700;
+  font-size: 1.15rem;
+}
+
+.shade {
+  position: fixed;
+  margin: -15%;
+  width: 1000%;
+  height: 1000%;
+  flex-shrink: 0;
+  background-color: rgba(43, 40, 38, 0.6);
+}
+
+.login {
+  position: absolute;
+  margin: 100px 280px;
+  padding: 5vh 2vw;
+  width: 370px;
+  height: 40vh;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background-color: #fff;
+}
+
+.closeBtn {
+  position: absolute;
+  margin-left: calc(370px - 2vw);
+  margin-top: -1vh;
+  width: 30px;
+  height: 30px;
+}
+
+.title {
+  display: flex;
+  margin-top: 3vh;
+  margin-left: 2vw;
+  align-items: center;
+}
+
+.modalLogo {
+  width: 80px;
+  height: 80px;
+}
+
+.text {
+  display: flex;
   color: #000;
   text-align: center;
-  font-feature-settings: "clig" off, "liga" off;
-  font-size: 1.1rem;
+  font-size: 15px;
   font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  justify-content: center;
+}
+
+.strong {
+  font-size: 17px;
   font-weight: 600;
-  line-height: 100%; /* 26.462px */
+}
+
+.forms {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1vh;
+}
+
+.form {
+  margin-top: 30px;
+  justify-content: center;
+  position: relative;
+  width: 300px;
+}
+
+input {
+  font-size: 1rem;
+  color: #222222;
+  width: 280px;
+  border: none;
+  border-bottom: solid #aaaaaa 1px;
+  position: relative;
+  background: none;
+  z-index: 5;
+}
+
+input::placeholder {
+  color: #aaaaaa;
+}
+input:focus {
+  outline: none;
+}
+
+span {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0%;
+  background-color: #666;
+  width: 0;
+  height: 2px;
+  border-radius: 2px;
+  transition: 0.5s;
+}
+
+label {
+  position: absolute;
+  color: #aaa;
+  left: 10px;
+  font-size: 1rem;
+  bottom: 8px;
+  transition: all 0.2s;
+}
+
+input:focus ~ label,
+input:valid ~ label {
+  font-size: 13px;
+  bottom: 30px;
+  color: #666;
+  font-weight: bold;
+}
+
+input:focus ~ span,
+input:valid ~ span {
+  width: 285px;
+}
+
+.loginBtn {
+  width: 250px;
+  height: 40px;
+  margin-top: 20px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: #6c00ff;
+  color: #fff;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 800;
+  border: 0;
+}
+
+.end {
+  display: flex;
+  margin-top: 15px;
+  align-items: baseline;
+}
+
+.text2 {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.signup {
+  font-size: 15px;
+  font-weight: 800;
+  margin-left: 7px;
+  color: #6c00ff;
+  text-align: center;
 }
