--- a/FrontEnd/chartflow/src/components/Header/Header.module.css
+++ b/FrontEnd/chartflow/src/components/Header/Header.module.css
@@ -206,3 +206,10 @@ input:valid ~ span {
   color: #6c00ff;
   text-align: center;
 }
+
+.line {
+  width: 95%;
+  height: 10px;
+  margin-left: -1vw;
+  border-bottom: 2px solid #6c00ff;
+}
