--- a/FrontEnd/chartflow/src/components/Header/Header.module.css
+++ b/FrontEnd/chartflow/src/components/Header/Header.module.css
@@ -9,22 +9,12 @@
   justify-content: space-between;
 }
 
-.section1 {
-  flex: 1;
-}
-.section2 {
-  flex: 2;
-}
-.section3 {
-  display: flex;
-  flex: 1;
-  justify-content: center;
-}
-
 .tab {
   border: 0;
   background-color: transparent;
   color: #000;
+  margin-left: 2vw;
+  margin-right: 2vw;
   text-align: center;
   font-feature-settings: "clig" off, "liga" off;
   font-size: 1.1rem;
@@ -46,6 +36,7 @@
   font-weight: 600;
   border: 0;
   text-align: center;
+  margin-right: 2vw;
 }
 .btn:hover {
   font-weight: 700;
@@ -208,7 +199,7 @@ input:valid ~ span {
 }
 
 .line {
-  width: 95%;
+  width: 100%;
   height: 10px;
   margin-left: -1vw;
   border-bottom: 2px solid #6c00ff;
