--- a/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
+++ b/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
@@ -2,20 +2,36 @@
   display: grid;
   grid-gap: 20px;
   height: 90vh;
+  margin-left: -5%;
+  margin-right: -5%;
   grid-template-areas:
     "chart buysell"
     "chart status"
     "chart hint"
     "chart settings"
     "chart end";
-  grid-template-rows: 200px 1fr 50px 50px 50px;
-  grid-template-columns: 1fr 300px;
+  grid-template-rows: 230px 1fr 50px 50px 50px;
+  grid-template-columns: 2fr 1fr;
 }
 
-.container div {
-  border: 0.1em solid black;
+.container > div {
+  border-radius: 30px;
+  border: 0;
+  flex-shrink: 0;
   background-color: #fff;
 }
+
+.container > button {
+  border-radius: 30px;
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  border: 0;
+  flex-shrink: 0;
+}
+
 .chart {
   grid-area: chart;
 }
@@ -30,12 +46,15 @@
 
 .hint {
   grid-area: hint;
+  background-color: #D9D9D9;
 }
 
 .settings {
   grid-area: settings;
+  background-color: #A2A2A2;
 }
 
 .end {
   grid-area: end;
+  background-color: #6C00FF;
 }
