--- a/FrontEnd/chartflow/src/pages/MainPage/MainPage.module.css
+++ b/FrontEnd/chartflow/src/pages/MainPage/MainPage.module.css
@@ -8,7 +8,7 @@
     "hotUpdate gotoGame"
     "hotUpdate rankWeekly"
     "footer footer";
-  grid-template-rows: 300px 90px 200px 100px;
+  grid-template-rows: 300px 90px 1fr 100px;
 }
 
 .header {
