--- a/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
+++ b/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
@@ -1,17 +1,17 @@
 .container {
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 15px;
   height: 90vh;
-  margin-left: -5%;
-  margin-right: -5%;
+  margin-left: -7%;
+  margin-right: -7%;
   grid-template-areas:
     "chart buysell"
     "chart status"
     "chart hint"
     "chart settings"
     "chart end";
-  grid-template-rows: 230px 1fr 50px 50px 50px;
-  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 200px 1fr 45px 45px 45px;
+  grid-template-columns: 1fr 400px;
 }
 
 .container > div {
@@ -46,15 +46,15 @@
 
 .hint {
   grid-area: hint;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
 .settings {
   grid-area: settings;
-  background-color: #A2A2A2;
+  background-color: #a2a2a2;
 }
 
 .end {
   grid-area: end;
-  background-color: #6C00FF;
+  background-color: #6c00ff;
 }
