Feat: 차트게임 주식매매, 게임현황 추가

--- a/FrontEnd/chartflow/src/components/BuySell/BuySell.module.css
+++ b/FrontEnd/chartflow/src/components/BuySell/BuySell.module.css
@@ -46,3 +46,18 @@
   grid-area: skip;
   background-color: rgba(0, 0, 0, 0.69);
 }
+
+.texts {
+  display: flex;
+}
+
+.now {
+  font-size: 20px;
+  color: #f86565;
+  font-weight: 700;
+  margin-top: -5px;
+}
+
+.all {
+  font-size: 13px;
+}
