--- a/FrontEnd/chartflow/src/pages/MainPage/MainPage.module.css
+++ b/FrontEnd/chartflow/src/pages/MainPage/MainPage.module.css
@@ -7,7 +7,7 @@
     "hotUpdate gotoGame"
     "hotUpdate rankWeekly"
     "footer footer";
-  grid-template-rows: 350px 90px 1fr 100px;
+  grid-template-rows: 2fr 90px 1fr 100px;
   grid-template-columns: 1fr 1fr;
 }
 
@@ -34,6 +34,8 @@
   font-size: 25px;
   text-align: center;
   line-height: 6vh;
+  min-width: max-content;
+  cursor: pointer;
 }
 
 .rankWeekly {
