--- a/FrontEnd/chartflow/src/pages/Join/Join.module.css
+++ b/FrontEnd/chartflow/src/pages/Join/Join.module.css
@@ -1,7 +1,7 @@
 .title {
   font-size: 30px;
   margin-top: 10vh;
-  margin-bottom: 8vh;
+  margin-bottom: 4vh;
   text-align: center;
 }
 
@@ -100,4 +100,10 @@
   text-align: center;
   vertical-align: middle;
   font-size: 15px;
+}
+
+.pwCheck {
+  color: rgba(254, 56, 56, 0.58);
+  padding-top: 13px;
+  padding-left: 5px;
 }
