Feat: 게임 시작종료 모달창 구현

--- a/FrontEnd/chartflow/src/components/Login/Login.module.css
+++ b/FrontEnd/chartflow/src/components/Login/Login.module.css
@@ -5,9 +5,10 @@
 
 .shade {
   position: fixed;
-  margin: -50%;
-  width: 200%;
-  height: 200%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   flex-shrink: 0;
   background-color: rgba(43, 40, 38, 0.6);
   z-index: 1;
