--- a/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
+++ b/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
@@ -8,9 +8,8 @@
     "chart buysell"
     "chart status"
     "chart hint"
-    "chart settings"
     "chart end";
-  grid-template-rows: 200px 1fr 45px 45px 45px;
+  grid-template-rows: 200px 1fr 45px 45px;
   grid-template-columns: 1fr 400px;
 }
 
@@ -23,10 +22,9 @@
 
 .container > button {
   border-radius: 30px;
-  color: #fff;
   font-weight: 600;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 800;
   border: 0;
   flex-shrink: 0;
@@ -47,15 +45,12 @@
 
 .hint {
   grid-area: hint;
-  background-color: #d9d9d9;
-}
-
-.settings {
-  grid-area: settings;
-  background-color: #a2a2a2;
+  background-color: #f0e57d;
+  color: rgba(0, 0, 0, 0.69);
 }
 
 .end {
   grid-area: end;
   background-color: #6c00ff;
+  color: #fff;
 }
