--- a/FrontEnd/chartflow/src/components/End/End.module.css
+++ b/FrontEnd/chartflow/src/components/End/End.module.css
@@ -27,6 +27,12 @@
   z-index: 2;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+  height: 48px;
+}
+
 .title {
   font-size: 17px;
   text-align: center;
@@ -35,6 +41,17 @@
   margin-bottom: 10%;
 }
 
+.goNew {
+  background-color: #8effa7;
+  color: rgba(0, 0, 0, 0.69);
+  font-size: 16px;
+  width: 80%;
+  height: 48px;
+  border: 0;
+  flex-shrink: 0;
+  border-radius: 30px;
+  margin-left: 5px;
+}
 .goResult {
   background-color: #6c00ff;
   color: #8effa7;
@@ -45,4 +62,16 @@
   flex-shrink: 0;
   border-radius: 30px;
   margin-left: 5px;
+}
+
+.coinLeft {
+  display: inline-flex;
+  margin-top: 15px;
+  font-size: 13px;
+}
+
+.coinNum {
+  font-size: 20px;
+  margin-top: -5px;
+  color: #f86565;
 }
