--- a/FrontEnd/chartflow/src/components/End/End.module.css
+++ b/FrontEnd/chartflow/src/components/End/End.module.css
@@ -75,3 +75,15 @@
   margin-top: -5px;
   color: #f86565;
 }
+
+.goResult2 {
+  background-color: #6c00ff;
+  color: #8effa7;
+  font-size: 16px;
+  width: 80%;
+  height: 48px;
+  border: 0;
+  flex-shrink: 0;
+  border-radius: 30px;
+  margin-left: 5px;
+}
