Feat: 회원가입 api 연결

--- a/FrontEnd/chartflow/src/pages/Join/Join.module.css
+++ b/FrontEnd/chartflow/src/pages/Join/Join.module.css
@@ -35,7 +35,7 @@
   height: 100%;
   width: 70%;
   font-size: 17px;
-  text-indent: 5%;
+  text-indent: 13px;
   vertical-align: top;
   border-radius: 30px;
   background: #fff;
@@ -47,7 +47,7 @@
   width: 100%;
   font-size: 17px;
   vertical-align: top;
-  text-indent: 5%;
+  text-indent: 13px;
   border-radius: 30px;
   background: #fff;
   border: 0;
