--- a/FrontEnd/chartflow/src/components/Login/Login.module.css
+++ b/FrontEnd/chartflow/src/components/Login/Login.module.css
@@ -19,7 +19,7 @@
   margin: 13vh 20vw;
   padding: 5vh 2vw;
   width: 370px;
-  height: 40vh;
+  height: 46vh;
   flex-shrink: 0;
   border-radius: 30px;
   background-color: #fff;
@@ -143,7 +143,8 @@ span {
 
 .end {
   display: flex;
-  margin-top: 15px;
+  margin-top: 20px;
+  margin-bottom: -10px;
   align-items: baseline;
 }
 
