--- a/FrontEnd/chartflow/src/pages/MyPage/MyPage.module.css
+++ b/FrontEnd/chartflow/src/pages/MyPage/MyPage.module.css
@@ -1,6 +1,6 @@
 .nickname {
   margin-top: 2vw;
-  width: 70vw;
+  width: 68vw;
   height: 40px;
   border-radius: 30px;
   background: #8EFFA7;
@@ -16,11 +16,25 @@
   line-height: normal;
 }
 
+.box1 {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box2 {
+  margin-left: 5vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .inputBox {
-  border-radius: 30px;
+  border-radius: 15px;
   background: #FFF; 
-  width: 40vw;
-  height: 40px;
+  width: 46vw;
+  height: 45px;
   color: #000;
   font-family: SUITE;
   font-size: 18px;
@@ -31,37 +45,63 @@
   margin-bottom: 5px;
   display: flex;
   align-items: center;
-
+  text-indent: 20px;
 }
 
 .bottomBox {
   display: flex;
-  margin-top: 15px;
-  margin-bottom: 20vh;
-  width: 70vw;
-  height: 200px;
-  border-radius: 30px;
+  justify-content: center;
+  margin-top: 30px;
+  margin-bottom: 13vh;
+  width: 68vw;
+  height: 250px;
+  border-radius: 15px;
   background: #FFF;
 }
 
 .btn {
+  margin-left: 60vw;
   display: inline-flex;
-  padding: 16px 30px 16px 30px;
+  padding: 15px 30px 15px 30px;
   align-items: center;
   border-radius: 10px;
   background: #6C00FF;
-  color: #8EFFA7;
+  color: #FFF;
   text-align: center;
   font-family: SUITE;
   font-size: 18px;
   font-style: normal;
-  font-weight: 800;
-  box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  font-weight: 700;
 }
 
 .profile {
+  display: flex;
+  margin-top: 10px;
   border-radius: 50%;
   background: #FFF;
   width: 120px;
   height: 120px;
+}
+
+.img {
+  height: 35px;
+  width: 35px;
+  margin: auto;
+  justify-content: center;
+}
+
+.font {
+  color: #000;
+  text-align: center;
+  font-family: SUITE;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.line {
+  height: 200px;
+  margin: auto;
+  justify-content: center;
 }
