--- a/FrontEnd/chartflow/src/pages/MyPage/MyPage.module.css
+++ b/FrontEnd/chartflow/src/pages/MyPage/MyPage.module.css
@@ -1,107 +1,182 @@
-.nickname {
-  margin-top: 2vw;
-  width: 68vw;
-  height: 40px;
-  border-radius: 30px;
-  background: #8EFFA7;
+.tag {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  color: #6C00FF;
+  flex-direction: column;
+  width: 30vw;
+  height: 42px;
+  border-radius: 30px;
+  background: #FFF;
+  color: #000000;
   text-align: center;
   font-family: SUITE;
-  font-size: 16px;
+  font-size: 20px;
   font-style: normal;
-  font-weight: 700;
-  line-height: normal;
+  font-weight: 400;
+  margin-top: 11px;
+  margin-bottom: 11px;
 }
-
+.tag:hover {
+  outline: 3px solid #ACD4BC;
+  color: #6C00FF;
+}
 .box1 {
-  margin-top: 20px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
-.box2 {
-  margin-left: 5vw;
+.back {
+  width: 64vw;
+  height: 510px;
+  border-radius: 20px;
+  background: #FFF;
+  margin: auto;
   display: flex;
+  flex-direction: column;
+}
+
+.nickname {
+  display: flex;
+  text-align: center;
   justify-content: center;
   flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50vw;
+  height: 36px;
+  border-radius: 10px;
+  background: #8EFFA7;
+  text-align: center;
+  color: #000;
+  font-family: Diphylleia;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.15));
+}
+
+.container1 {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.profile {
+  width: 160px;
+  height: 160px;
+  fill: #FFF;
+  border: 2px solid #C9C9C9;
+  border-radius: 50%;
+  margin-right: 40px;
+}
+
+.pencil {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  margin-top: 65px;
+  margin-left: 65px;
+  cursor: pointer;
 }
 
 .inputBox {
-  border-radius: 15px;
-  background: #FFF; 
-  width: 46vw;
-  height: 45px;
+  display: flex;
+  text-indent: 20px;
+  width: 33vw;
+  height: 40px;
+  border-radius: 18px;
+  border: 2px solid #C9C9C9;
+  margin-bottom: 10px;
+}
+
+.inputFont{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   color: #000;
   font-family: SUITE;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400;
   line-height: normal;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  display: flex;
-  align-items: center;
-  text-indent: 20px;
 }
 
-.bottomBox {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-  margin-bottom: 13vh;
-  width: 68vw;
-  height: 250px;
-  border-radius: 15px;
-  background: #FFF;
+.warning {
+  color: #6C00FF;
+  text-align: center;
+  font-family: SUITE;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 200;
+  margin-bottom: 15px;
 }
 
-.btn {
-  margin-left: 60vw;
-  display: inline-flex;
-  padding: 15px 30px 15px 30px;
-  align-items: center;
+.btn1 {
+  width: 5vw;
+  height: 40px;
   border-radius: 10px;
   background: #6C00FF;
   color: #FFF;
   text-align: center;
   font-family: SUITE;
-  font-size: 18px;
+  font-size: 15px;
   font-style: normal;
-  font-weight: 700;
-}
-
-.profile {
-  display: flex;
-  margin-top: 10px;
-  border-radius: 50%;
-  background: #FFF;
-  width: 120px;
-  height: 120px;
-}
-
-.img {
-  height: 35px;
-  width: 35px;
-  margin: auto;
+  font-weight: 400;
+  line-height: normal;
+  display:  flex;
+  flex-direction: column;
   justify-content: center;
+  cursor: pointer;
+  margin-left: 300px;
+  margin-top: 50px;
 }
 
-.font {
+.btn2 {
+  width: 5vw;
+  height: 40px;
+  border-radius: 10px;
+  background: #D9D9D9;
+  color: #555;
+  text-align: center;
+  font-family: SUITE;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display:  flex;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-top: 50px;
+}
+
+.container2 {
+  display: flex;
+  align-items: center;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   color: #000;
   text-align: center;
   font-family: SUITE;
-  font-size: 24px;
+  font-size: 19px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  text-indent: 70px;
 }
 
-.line {
-  height: 200px;
+.container3 {
   margin: auto;
-  justify-content: center;
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
 }
