--- a/FrontEnd/chartflow/src/pages/QuizCorrect/QuizCorrect.module.css
+++ b/FrontEnd/chartflow/src/pages/QuizCorrect/QuizCorrect.module.css
@@ -40,14 +40,14 @@
   margin: auto;
   display: flex;
   justify-content: center;
-  width: 220px;
-  height: 60px;
+  width: 13vw;
+  height: 56px;
   border-radius: 20px;
   background: #6C00FF;
   color: #FFF;
   text-align: center;
   font-family: SUITE;
-  font-size: 25px;
+  font-size: 21px;
   font-style: normal;
   font-weight: 300px;
   line-height: normal;
