[front] 네비에 이름 표시되게 변경

--- a/FrontEnd/chartflow/src/components/Header/Header.module.css
+++ b/FrontEnd/chartflow/src/components/Header/Header.module.css
@@ -65,7 +65,7 @@
 }
 
 .dropdown {
-  position: absolute;
+  /* position: absolute;
   top: 100%;
   right: 0;
   background-color: #6c00ff;
@@ -73,7 +73,7 @@
   border-radius: 4px;
   padding: 10px;
   z-index: 1;
-  min-width: 100px;
+  min-width: 100px; */
   /* white-space: nowrap; */
 }
 
