--- a/FrontEnd/chartflow/src/components/Header/Header.module.css
+++ b/FrontEnd/chartflow/src/components/Header/Header.module.css
@@ -60,12 +60,17 @@
   border-bottom: 2px solid #6c00ff;
 }
 
+.userIconContainer {
+  white-space: nowrap;
+  
+}
+
 .userIcon {
   position: relative;
 }
 
 .dropdown {
-  /* position: absolute;
+  /* position: absolute; */
   top: 100%;
   right: 0;
   background-color: #6c00ff;
@@ -73,8 +78,8 @@
   border-radius: 4px;
   padding: 10px;
   z-index: 1;
-  min-width: 100px; */
-  /* white-space: nowrap; */
+  min-width: 100px;
+  /* white-space: nowrap;*/
 }
 
 .dropdownButton {
@@ -83,4 +88,5 @@
   font-weight: bolder;
   border: none;
   padding: 5px;
+  white-space: nowrap;
 }
