[front] 차트게임 api 연결 진행 중

--- a/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
+++ b/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
@@ -54,3 +54,10 @@
   background-color: #6c00ff;
   color: #fff;
 }
+
+.loading {
+  background-color: #fff;
+  width: 100px;
+  margin-left: 25vw;
+  margin-top: 35vh;
+}
