--- a/FrontEnd/chartflow/src/components/Header/Header.module.css
+++ b/FrontEnd/chartflow/src/components/Header/Header.module.css
@@ -64,6 +64,7 @@
   display: flex;
   width: 100%;
   cursor: pointer;
+  margin-bottom: -7px;
 }
 
 .userIcon {
@@ -75,14 +76,12 @@
   flex-direction: column;
   position: fixed;
   margin-left: 140px;
+  top: 65px;
   background-color: #fff;
   width: 80px;
   border: 0;
   border-radius: 4px;
   z-index: 3;
-}
-.dropdown:focus {
-  outline: none;
 }
 
 .dropdownButton {
@@ -94,6 +93,9 @@
   border: 1px solid black;
   padding: 5px;
   cursor: pointer;
+}
+.dropdownButton:hover {
+  color: #6c00ff;
 }
 
 .TextContainer {
