--- a/FrontEnd/chartflow/src/pages/MyPage/MyPage.module.css
+++ b/FrontEnd/chartflow/src/pages/MyPage/MyPage.module.css
@@ -93,6 +93,7 @@
 }
 
 .inputFont{
+  width: 27%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -130,7 +131,7 @@
   flex-direction: column;
   justify-content: center;
   cursor: pointer;
-  margin-left: 300px;
+  margin-left: 68%;
   margin-top: 50px;
 }
 
@@ -170,7 +171,6 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  text-indent: 70px;
 }
 
 .container3 {
@@ -210,4 +210,18 @@
   display: flex;
   flex-direction: column;
   text-indent: 10px;
+}
+
+.password {
+  border: none;
+  outline: none;
+  display: flex;
+  flex-direction: column;
+  color: #000;
+  font-family: SUITE;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-indent: 20px;
 }
