--- a/FrontEnd/chartflow/src/pages/History/History.module.css
+++ b/FrontEnd/chartflow/src/pages/History/History.module.css
@@ -20,6 +20,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  cursor: pointer;
 }
 
 .head1:hover {
@@ -36,7 +37,7 @@
   flex-direction: column;
 }
 
-.con1 {
+.con2 {
   margin-top: 20px;
   display: flex;
   text-align: center;
@@ -46,7 +47,6 @@
 .titleFont {
   margin-top: 20px;
   color: #000;
-  text-align: center;
   font-family: SUITE;
   font-size: 24px;
   font-style: normal;
@@ -71,6 +71,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  cursor: pointer;
 }
 
 .nick1:hover {
@@ -94,25 +95,186 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  cursor: pointer;
 }
-
 .nick2:hover {
   outline: 4px solid #62BDFF;
   font-weight: 600;
 }
 
 .rank1 {
-  width: 26vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 27vw;
   height: 80px;
-  border-radius: 10px;
+  border-radius: 15px;
   background: #6C00FF;
   margin-bottom: 10px;
 }
 
 .rank2 {
-  width: 26vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 27vw;
   height: 50px;
-  border-radius: 10px;
+  border-radius: 15px;
   background: #D9D9D9;
   margin-bottom: 10px;
+}
+
+.rank1Font {
+  margin-left: 20px;
+  display: flex;
+  color: #8EFFA7;
+  text-align: center;
+  font-family: Fugaz One;
+  font-size: 43px;
+  font-style: normal;
+  font-weight: 650;
+  line-height: normal;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.rank2Font {
+  margin-left: 5%;
+  display: flex;
+  color: #000;
+  font-family: Fugaz one;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.mainFont {
+  color: #000;
+  font-family: SUITE;
+  font-size: 27px;
+  font-style: normal;
+  font-weight: 700;
+  margin-top: 3%;
+  margin-left: 3%;
+}
+
+.userBox {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  width: 11vw;
+  height: 150px;
+  border-radius: 30px;
+  border: 3px solid #FFD2E8;
+}
+
+.perFont {
+  display: flex;
+  justify-content: center;
+  color: #E62D2D;
+  font-family: Fugaz One;
+  font-size: 190%;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.price1 {
+  margin-top: 10px;
+  color: #FFF;
+  font-family: SUITE;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+}
+.price2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  color: #8A8A8A;
+  font-family: SUITE;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.userName {
+  margin-top: 10px;
+  color: #000;
+  font-family: SUITE;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.rankUser {
+  color: #8EFFA7;
+  text-align: center;
+  font-family: SUITE;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.imgSize {
+  margin-right: 20px;
+  width: 50px;
+  height: 50px;
+}
+
+.user2 {
+  color: #000;
+  font-family: SUITE;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.price3 {
+  color: #6C00FF;
+  font-family: SUITE;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  margin-right: 10px;
+}
+
+.dash {
+  margin: auto;
+  width: 30vw;
+  height: 150px;
+  border-radius: 30px;
+  border: 3px dashed #CFE8E8;
+}
+
+.con3 {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.hisFont {
+  margin-top: 16px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  color: #000;
+  font-family: SUITE;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.gameFont {
+  color: #5563E7;
+  font-family: SUITE;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5px;
 }
