[front] 차트게임 턴진행 api 완료

--- a/FrontEnd/chartflow/src/components/Quit/Quit.module.css
+++ b/FrontEnd/chartflow/src/components/Quit/Quit.module.css
@@ -45,6 +45,7 @@
   flex-shrink: 0;
   border-radius: 30px;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .goSave {
@@ -56,4 +57,14 @@
   flex-shrink: 0;
   border-radius: 30px;
   margin-left: 5px;
+  cursor: pointer;
+}
+
+.closeBtn {
+  position: absolute;
+  margin-left: 19vw;
+  margin-top: -2vh;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
