--- a/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
+++ b/FrontEnd/chartflow/src/pages/ChartGame/ChartGame.module.css
@@ -56,8 +56,21 @@
 }
 
 .loading {
-  background-color: #fff;
-  width: 100px;
-  margin-left: 25vw;
+  position: fixed;
+  background-color: transparent;
+  width: 130px;
+  margin-left: 33vw;
   margin-top: 35vh;
+  z-index: 2;
+}
+
+.shade {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  flex-shrink: 0;
+  background-color: rgba(43, 40, 38, 0.6);
+  z-index: 1;
 }
