--- a/FrontEnd/chartflow/src/components/Status/Status.module.css
+++ b/FrontEnd/chartflow/src/components/Status/Status.module.css
@@ -101,3 +101,15 @@
 .curPriceNum {
   grid-area: curPriceNum;
 }
+
+.redText {
+  color: #f86565;
+}
+
+.blueText {
+  color: #5258e6;
+}
+
+.blackText {
+  color: black;
+}
