--- a/FrontEnd/chartflow/src/components/RankWeekly/RankWeekly.module.css
+++ b/FrontEnd/chartflow/src/components/RankWeekly/RankWeekly.module.css
@@ -1,5 +1,71 @@
-.item {
+.bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 30px;
+  width: 100%;
   height: 100%;
   background-color: #fff;
+}
+.innerText {
+  width: 95%;
+  height: 95%;
+}
+.title {
+  display: flex;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.medalImg {
+  width: 35px;
+  height: 35px;
+}
+
+.line {
+  height: 7px;
+  border-bottom: 2px solid #959595;
+}
+
+.titleName {
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 11px;
+  margin-left: 3px;
+}
+
+.list {
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.member {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 18%;
+  height: 150px;
+  background: #f0e5ff;
+  border-radius: 30px;
+  flex-shrink: 0;
+}
+
+.number {
+  font-size: 25px;
+  font-weight: 900;
+  line-height: 50px;
+}
+
+.profilePic {
+  border-radius: 100%;
+  width: 60px;
+  height: 60px;
+  flex-shrink: 0;
+  background: #fff;
+}
+
+.username {
+  font-size: 15px;
+  margin-top: 6px;
 }
