--- a/FrontEnd/chartflow/src/pages/BoardOne/BoardOne.module.css
+++ b/FrontEnd/chartflow/src/pages/BoardOne/BoardOne.module.css
@@ -24,17 +24,27 @@
   display: flex;
   width: 100%;
   height: 60px;
+  font-size: 25px;
+  margin-top: 40px;
+  margin-left: 40px;
 }
 
 .content {
-  background-color: #fff;
   width: 100%;
   height: 95%;
   border-radius: 30px;
   margin-top: 20px;
+  margin-left: 20px;
   outline: none;
   border: 0;
-  font-size: 13px;
+  font-size: 20px;
   text-indent: 30px;
   padding-top: 30px;
+}
+
+.line {
+  margin-left: 5%;
+  border-bottom: 2px solid #959595;
+  width: 90%;
+  justify-content: center;
 }
