--- a/FrontEnd/chartflow/src/pages/Quiz/Quiz.module.css
+++ b/FrontEnd/chartflow/src/pages/Quiz/Quiz.module.css
@@ -1,8 +1,8 @@
 .ansContainer {
   display: grid;
-  grid-template-areas: 
-  "ansBtn1 ansBtn2"
-  "ansBtn3 ansBtn4";
+  grid-template-areas:
+    "ansBtn1 ansBtn2"
+    "ansBtn3 ansBtn4";
   align-items: center;
   justify-content: center;
   align-items: center;
@@ -17,8 +17,8 @@
   width: 25vw;
   height: 10vh;
   border-radius: 30px;
-  border: 5px solid #6C00FF;
-  background: #F4ECFF;
+  border: 5px solid #6c00ff;
+  background: #f4ecff;
   box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.25);
   align-items: center;
   justify-content: center;
@@ -38,8 +38,8 @@
   width: 25vw;
   height: 10vh;
   border-radius: 30px;
-  border: 5px solid #6C00FF;
-  background: #F4ECFF;
+  border: 5px solid #6c00ff;
+  background: #f4ecff;
   box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.25);
   align-items: center;
   justify-content: center;
@@ -59,8 +59,8 @@
   width: 25vw;
   height: 10vh;
   border-radius: 30px;
-  border: 5px solid #6C00FF;
-  background: #F4ECFF;
+  border: 5px solid #6c00ff;
+  background: #f4ecff;
   box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.25);
   align-items: center;
   justify-content: center;
@@ -80,8 +80,8 @@
   width: 25vw;
   height: 10vh;
   border-radius: 30px;
-  border: 5px solid #6C00FF;
-  background: #F4ECFF;
+  border: 5px solid #6c00ff;
+  background: #f4ecff;
   box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.25);
   align-items: center;
   justify-content: center;
@@ -96,36 +96,35 @@
 }
 
 .ansBtn1:hover {
-  background: #8EFFA7;
-  color: #6C00FF;
+  background: #8effa7;
+  color: #6c00ff;
 }
 .ansBtn2:hover {
-  background: #8EFFA7;
-  color: #6C00FF;
+  background: #8effa7;
+  color: #6c00ff;
 }
 .ansBtn3:hover {
-  background: #8EFFA7;
-  color: #6C00FF;
+  background: #8effa7;
+  color: #6c00ff;
 }
 .ansBtn4:hover {
-  background: #8EFFA7;
-  color: #6C00FF;
+  background: #8effa7;
+  color: #6c00ff;
 }
 
 .fullBox {
   display: flex;
   overflow: auto;
   flex-direction: column;
-  justify-content: space-between;
   margin-top: 20px;
   width: 100%;
   height: 80vh;
   border-radius: 30px;
-  background: #FFF;
+  background: #fff;
 }
 
 .quizFont {
-  word-break:break-all;
+  word-break: break-all;
   margin-left: 50px;
   margin-right: 50px;
   color: #000;
@@ -135,7 +134,20 @@
   font-weight: 600;
   line-height: normal;
   text-align: center;
-  }
+}
+.quizDone {
+  word-break: break-all;
+  margin-top: 200px;
+  margin-left: 50px;
+  margin-right: 50px;
+  color: #000;
+  font-family: SUITE;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-align: center;
+}
 
 .title {
   color: #000;
