--- a/FrontEnd/chartflow/src/components/NewComments/NewComments.module.css
+++ b/FrontEnd/chartflow/src/components/NewComments/NewComments.module.css
@@ -3,9 +3,9 @@
   justify-content: center;
   align-items: center;
   border-radius: 30px;
-  width: 100%;
-  height: 100%;
   background-color: #fff;
+  margin-top: 20px;
+  padding: 10px;
 }
 .innerText {
   display: flex;
