--- a/FrontEnd/chartflow/src/components/GameRecord/GameRecord.module.css
+++ b/FrontEnd/chartflow/src/components/GameRecord/GameRecord.module.css
@@ -7,16 +7,68 @@
   flex-shrink: 0;
   background-color: rgba(43, 40, 38, 0.6);
   z-index: 1;
+  display: flex;
   }
 
 .modalRecord {
-  position: absolute;
-  margin: 13vh 20vw;
+  margin: auto;
   padding: 5vh 2vw;
-  width: 370px;
-  height: 46vh;
+  width: 42vw;
+  height: 62vh;
   flex-shrink: 0;
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: #fff;
   z-index: 2;
+  font-family: SUITE;
   }
+
+.closeBtn {
+  margin-top: 15px;
+  width: 60px;
+  height: 30px;
+  border-radius: 10px;
+  border: 0;
+  background: #D9D9D9;
+  color: #555;
+  font-family: SUITE;
+  cursor: pointer;
+}
+
+.dateFont {
+  color: #AF84EA;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: normal;
+  margin-bottom: 2px;
+}
+
+.nemo {
+  justify-content: space-evenly;
+  padding: 2px 2px;
+  display: flex;
+  align-items: center;
+  margin: auto;
+  width: 42vw;
+  height: 10vh;
+  border-radius: 20px;
+  background: #F7F7F7;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.gFont {
+  font-size: 20px;
+  color: #6C00FF;
+}
+
+.con {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-family: SUITE;
+}
+
+.arrow {
+  width: 30px;
+  height: 30px;
+  padding: 10px;
+}
