--- a/FrontEnd/chartflow/src/pages/Quiz/Quiz.module.css
+++ b/FrontEnd/chartflow/src/pages/Quiz/Quiz.module.css
@@ -9,6 +9,7 @@
   height: 30vh;
   width: 100%;
   margin-bottom: 3vh;
+  margin-top: 10vh;
 }
 
 .ansBtn1 {
@@ -127,6 +128,7 @@
   word-break: break-all;
   margin-left: 50px;
   margin-right: 50px;
+  margin-top: 5vh;
   color: #000;
   font-family: SUITE;
   font-size: 25px;
