--- a/FrontEnd/chartflow/src/components/Comments/Comments.module.css
+++ b/FrontEnd/chartflow/src/components/Comments/Comments.module.css
@@ -86,7 +86,7 @@
   text-indent: 3%;
   color: #222222;
   width: 85%;
-  border: solid #aaaaaa 1px;
+  border: solid #e0dfdf 1px;
   border-radius: 10px 0px 0px 10px;
   background: none;
   outline: none;
@@ -105,12 +105,26 @@
   margin-top: 20px;
   flex-shrink: 0;
   border-radius: 0px 10px 10px 0px;
-  background: #8effa7;
-  color: #6c00ff;
+  background: #e0dfdf;
+  color: #aaaaaa;
   text-align: center;
   font-size: 15px;
   font-weight: 800;
   border: 0;
+  cursor: pointer;
+}
+
+.ReComWriteBtn {
+  position: absolute;
+  width: 60px;
+  height: 40px;
+  right: 40vw;
+  margin-top: -20px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  border: 1px #959595 solid;
+  background-color: #fff;
+  font-size: 15px;
   cursor: pointer;
 }
 
@@ -132,6 +146,7 @@
   padding-bottom: 10px;
   font-size: 15px;
   margin-left: 30px;
+  text-align: baseline;
 }
 
 .line3 {
