--- a/FrontEnd/chartflow/src/pages/BoardOne/BoardOne.module.css
+++ b/FrontEnd/chartflow/src/pages/BoardOne/BoardOne.module.css
@@ -3,8 +3,7 @@
   display: grid;
   grid-gap: 20px;
   height: 100vh;
-  grid-template-areas:
-    "board new";
+  grid-template-areas: "board new";
   grid-template-columns: 0.7fr 0.3fr;
 }
 
@@ -22,7 +21,6 @@
   padding: 30px;
 }
 
-
 .title {
   display: flex;
   height: 40px;
@@ -33,8 +31,8 @@
 }
 
 .content {
-  width: 100%;
-  height: 95%;
+  width: 97%;
+  height: 75%;
   border-radius: 30px;
   margin-top: 20px;
   margin-left: 20px;
@@ -57,6 +55,7 @@
   width: 30px;
   height: 30px;
   margin-left: 83%;
+  cursor: pointer;
 }
 .comments {
   border-radius: 30px;
@@ -69,4 +68,46 @@
   position: fixed;
   width: 18vw;
   left: 64vw;
+}
+
+.submit {
+  display: flex;
+}
+
+.revise {
+  position: absolute;
+  width: 90px;
+  height: 55px;
+  top: 56vh;
+  left: 32vw;
+  border-radius: 10px;
+  bottom: 10px;
+  border: 1px solid #959595;
+  background: #f6f6f6;
+  /* box-shadow: 4px 4px 7px 0px rgba(0, 0, 0, 0.25); */
+  color: #959595;
+  font-size: 17px;
+  font-weight: 600;
+  /* margin-left: 35vw;
+  margin-right: 10px; */
+  cursor: pointer;
+}
+
+.delete {
+  position: absolute;
+  width: 90px;
+  height: 55px;
+  top: 56vh;
+  left: 39vw;
+  border-radius: 10px;
+
+  border: 1px solid #959595;
+  background: #f6f6f6;
+  /* box-shadow: 4px 4px 7px 0px rgba(0, 0, 0, 0.25); */
+  color: #959595;
+  font-size: 17px;
+  font-weight: 600;
+  /* margin-left: 35vw;
+  margin-right: 10px; */
+  cursor: pointer;
 }
