--- a/FrontEnd/chartflow/src/pages/BoardOne/BoardOne.module.css
+++ b/FrontEnd/chartflow/src/pages/BoardOne/BoardOne.module.css
@@ -52,9 +52,10 @@
   margin-top: 30px;
 }
 .thumbsup {
+  position: absolute;
   width: 30px;
   height: 30px;
-  margin-left: 83%;
+  left: 58vw;
   cursor: pointer;
 }
 .comments {
